# TeeJay-Survey-MCP

./: .gitignore  README.md  pyproject.toml
docs/: ROADMAP.md  microsurvey-dialog-automation.md
src/mscad_mcp/: connection.py  dialog_driver.py  server.py  trace.py
src/mscad_mcp/tools/: app.py  automap.py  cogo.py  drawing.py  entities.py  layers.py  modify.py  msannotate.py  query.py  settings.py  surface.py  survey.py  template.py  transform.py  traverse.py  view.py
tools_recon/: fire_command.py  probe_dialog_tree.py  probe_ok.py  read_gc_scale.py  test_create_new_drawing.py  test_scale_set.py  verify_state.py  wizard_driver.py
